Cloud_provider/diplom/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: diplom-app-svc
  namespace: diplom
  labels:
    app: diplom-app
spec:
  type: ClusterIP
  selector:
    app: diplom-app
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
